--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
   <meta name="description" content="Professional audio enhancement and mastering platform" />
   <meta name="author" content="Level Audio" />
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
+
+  <!-- Open Graph -->
   <meta property="og:title" content="Level Audio - Professional Audio Enhancement" />
   <meta property="og:description" content="Professional audio enhancement and mastering platform" />
   <meta property="og:type" content="website" />
+  <meta property="og:image" content="/favicon.png" />
 
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Level Audio" />
+  <meta name="twitter:description" content="Professional audio enhancement and mastering platform" />
 </head>
 
 <body>
